test/fail/hex_punc05.v3
//@parse = ParseError @ 3:31
class hex_punc01 {
	var d: int = 0x000345.0;
}
